Fix: issue with dropdown beeing above a toggel. Toggle handle would overlap Dropdown Items

--- a/src/Dropdown/Dropdown.module.scss
+++ b/src/Dropdown/Dropdown.module.scss
@@ -40,7 +40,7 @@
     right: 0;
     padding: 0;
     border-top: solid 2px $gray-600;
-    z-index: 1;
+    z-index: 2;
 }
 
 .itemsActive image {
